# neuroforum

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/skills/neuroforum/: SKILL.md
.github/workflows/: ci.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_22_0051-ff061e70b231_create_extensions.py  2026_06_22_0052-6f7d1e0cabfe_initial_schema.py  2026_06_22_1143-a85c146ecf1f_add_last_seen_at_and_topic_kind.py  2026_06_22_2127-517a3527d349_add_agent_tokens.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  db.py  presence.py  ratelimit.py  security.py
backend/app/mcp_server/: __init__.py  __main__.py  auth.py  server.py  tools.py
backend/app/modules/agents/: __init__.py  crypto.py  deps.py  exceptions.py  llm_proxy.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/ai_proposals/: __init__.py  deps.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/articles/: __init__.py  deps.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/attachments/: __init__.py  deps.py  exceptions.py  minio_client.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/auth/: deps.py  exceptions.py  models.py  repository.py  routes.py  (+2 more)
backend/app/workers/: __init__.py  ai_proposals.py  attachments.py
backend/scripts/: __init__.py  seed.py
backend/tests/: conftest.py  test_scaffold.py
backend/tests/integration/: test_end_to_end.py  test_generated_tsvector.py
docker/: backend-entrypoint.sh  backend.Dockerfile  frontend.Dockerfile
docs/: data-model.md
docs/adr/: 0001-modular-monolith.md  0002-prosemirror-jsonb-content.md  0003-postgres-tsvector-with-opensearch-stub.md
frontend/: .eslintrc.json  .gitignore  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/e2e/: ai-review-real-llm.spec.ts  ai-review.spec.ts  ai-reviews-section.spec.ts  edit-ai-proposal.spec.ts  markdown-render.spec.ts  mobile.spec.ts  showcase.spec.ts  smoke.spec.ts  toolbar.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: auth-bootstrap.tsx
frontend/src/lib/: api.ts  attachments-limits.ts  auth-store.ts  markdown-utils.ts  notifications.ts  query-client.tsx  types.ts  upload.ts  url-utils.ts
(+203 files in other folders)
