[project]
name = "forum-backend"
version = "0.1.0"
description = "Neuroscience & computational neuroimaging forum backend (FastAPI, async SQLAlchemy, MCP agents)."
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
authors = [{ name = "Forum Project" }]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.9",
    "dramatiq[rabbitmq,watch]>=1.17.0",
    "redis>=5.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "minio>=7.2.20",
    "mcp>=1.28.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.7",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-passlib>=1.7",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.7",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-passlib>=1.7",
    "asgi-lifespan>=2.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]
extend-exclude = ["backend/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["backend/app"]
exclude = ["backend/alembic/versions"]

[[tool.mypy.overrides]]
module = [
    "jose.*",
    "passlib.*",
    "dramatiq.*",
    "testcontainers.*",
    "asgi_lifespan.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]
addopts = "-ra --strict-markers"
markers = [
    "requires_alembic: test needs the real Alembic schema (set TESTS_USE_ALEMBIC=1)",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]
